Fixed margin on small devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -114,7 +114,7 @@ body {
     margin: 0 !important;
 }
 
-.instructGif {
+#instructions img {
     margin: 0 !important;
 }
 
